--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,17 @@ dependencies = [
     "pandas>=2.2.3",
     "pip>=25.0.1",
     "pydantic-ai>=0.0.55",
+    "pydantic-evals>=0.0.55",
     "scikit-learn>=1.6.1",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[[tool.uv.index]]
+url = "https://pypi.org/simple"
+
+[[tool.uv.index]]
+url = "https://pypi.zalando.net/repository/pypi/simple"
+default = true
