--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.12"
 dependencies = [
     "hpelm>=1.0.10",
     "ipykernel>=6.29.5",
+    "jinja2>=3.1.6",
     "matplotlib>=3.10.1",
     "numpy>=2.2.4",
     "pandas>=2.2.3",
@@ -24,8 +25,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [[tool.uv.index]]
-url = "https://pypi.org/simple"
-
-[[tool.uv.index]]
 url = "https://pypi.zalando.net/repository/pypi/simple"
 default = true
+
+[[tool.uv.index]]
+url = "https://pypi.org/simple"
